# alphasoft

./: .SHM_HOST.TXT  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  Dockerfile  Doxyfile  Makefile  README.md  acmake_config_and_install  agconfig.sh  agconfig.sh.orig  bitbucket-pipelines.yml  clang-format.cmake  cmake_config_and_install.sh  docker-compose.yml  exptab  htpasswd.txt  install_VMC.txt  kill_daq.sh  myconfig.sh  pythonenv.py  result37997.txt  result38881.txt  result39993.txt  result40996.txt  result42486.txt  result44983.txt  result46992.txt  result51974.txt  result53954.txt  result54989.txt  result57117.txt  rootlogon.C  run_dump.sh  setup.sh  start_daq.sh
a2lib/: CMakeLists.txt  HYBGAINS.ALPHA1.TXT  HYBGAINS.ALPHA2.TXT  LibLinkDef.hh  Makefile  SISModule.h  a2lib.cc_tmp_52890  build_db.sh  settings.sql  tempFitterPsiTable.csv
a2lib/RootUtils/: A2RootUtils.h  BinaryRunners.h  BoolGetters.cxx  BoolGetters.h  DoubleGetters.h  FileGetters.h  IntGetters.h  PlotGetters.cxx  PlotGetters.h  PrintTools.h  RootUtils.h  TGraphGetters.h  TH1DGetters.cxx  TH1DGetters.h  TSeqEventGetters.h  TSplineGetters.h  TStringGetters.h  TreeGetters.h
a2lib/geo/: detector2_geo.xml  detector_geo.xml  environment2_geo.xml  environment_geo.xml  material.xml  material2.xml
a2lib/include/: ALPHA2SettingsDatabase.h  SISModule.h  SiMod.h  TA2RunQOD.h  TA2Spill.h  TAlphaDisplay.h  TAlphaEvent.h  TAlphaEventCosmicHelix.h  TAlphaEventHelix.h  TAlphaEventHit.h  TAlphaEventMap.h  TAlphaEventNCluster.h  TAlphaEventPCluster.h  TAlphaEventSil.h  TAlphaEventSilArray.h  TAlphaEventSummary.h  TAlphaEventTrack.h  TAlphaEventVertex.h  TAlphaGeoDetectorXML.h  TAlphaGeoEnvironmentXML.h  TAlphaGeoMaterialXML.h  TProjClusterBase.h  TSISChannel.h  TSISChannels.h  TSISEvent.h  TSISQOD.h  TSVDQODIntegrator.h  TSVDStripsQOD.h  TSVD_QOD.h  TSettings.h  TSiliconEvent.h  TSiliconModule.h  TSiliconStrip.h  TSiliconVA.h  TSisEvent.h  TStoreA2Event.hh  TStoreHelix.hh  TStoreLine.hh  TStripPed.h  TStripPed.h.bak  (+3 more)
a2lib/legacy/: TAlphaEvent.cxx  TAlphaEvent.h  TAlphaEventCluster.h  TAlphaEventCosmicHelix.cxx  TAlphaEventHelix.cxx  TAlphaEventHelix.h  TAlphaEventHit.cxx  TAlphaEventHit.h  TAlphaEventMap.h  TAlphaEventNCluster.cxx  TAlphaEventNCluster.h  TAlphaEventNStrip.cxx  TAlphaEventNStrip.h  TAlphaEventObject.cxx  TAlphaEventObject.h  TAlphaEventObjectArray.h  TAlphaEventPCluster.cxx  TAlphaEventPCluster.h  TAlphaEventPStrip.cxx  TAlphaEventPStrip.h  TAlphaEventSil.cxx  TAlphaEventSil.h  TAlphaEventSilArray.cxx  TAlphaEventStrip.cxx  TAlphaEventStrip.h  TAlphaEventSummary.h  TAlphaEventTrack.cxx  TAlphaEventTrack.h  TAlphaEventVerbose.cxx  TAlphaEventVerbose.h  TAlphaEventVertex.cxx  TAlphaEventVertex.h  THoughPeak.h  THoughPeakFinder.h  TProjCluster.cxx  TProjCluster.h  TProjClusterAna.cxx  TProjClusterAna.h  TProjClusterBase.cxx  legacy.txt  (+1 more)
a2lib/maps/: vf48_map.00011  vf48_map.00012  vf48_map.00013  vf48_map.00014  vf48_map.00015
a2lib/src/: ALPHA2SettingsDatabase.cxx  SISModule.cxx  TA2RunQOD.cxx  TA2Spill.cxx  TAlphaDisplay.cxx  TAlphaEvent.cxx  TAlphaEventHelix.cxx  TAlphaEventHit.cxx  TAlphaEventMap.cxx  TAlphaEventNCluster.cxx  TAlphaEventObject.cxx  TAlphaEventPCluster.cxx  TAlphaEventSil.cxx  TAlphaEventTrack.cxx  TAlphaEventVertex.cxx  THoughPeakFinder.cxx  TProjClusterAna.cxx  TSISChannel.cxx  TSISChannels.cxx  TSISEvent.cxx  (+15 more)
aged/: Aged.cxx  Aged.h  AgedImage.cxx  AgedImage.h  AgedResource.h  AgedWindow.cxx  CMakeLists.txt  ImageData.cxx  ImageData.h  Makefile  Makefile.darwin_i386  Makefile.darwin_powerpc  Makefile.darwin_x86_64  Makefile.include  Makefile.linux_i386  Makefile.linux_x86_64  PBarEventHistogram.cxx  PBarEventHistogram.h  PDeconvWindow.cxx  PDeconvWindow.h  PEventControlWindow.cxx  PEventControlWindow.h  PEventHistogram.cxx  PEventInfoWindow.cxx  PHistImage.cxx  PResourceManager.cxx  PWaveformWindow.cxx  detector.geo  menu.h  mkgeo
aglib/: CMakeLists.txt  LibLinkDef.hh
alpha2/: CMakeLists.txt  GitInfo.sh  LyAlphaAnd243_2018  Makefile  a2dumper.modules  alpha2online.modules  alphaAnalysis.modules  alphaStrips.modules  rootlogon.C
ana/: AgAsm.cxx  AgAsm.h  AgEVB.cxx  AgEVB.h  AgEvent.cxx  AgEvent.h  AgFlow.h  Aged.resource  Alpha16.cxx  Alpha16.h  AnalysisReport_module.cxx  CMakeLists.txt  Feam.cxx  Feam.h  FeamAsm.cxx  FeamAsm.h  FeamEVB.cxx  FeamEVB.h  GitInfo.sh  Makefile  PwbAsm.cxx  PwbAsm.h  SignalsType.h  Tdc.cxx  TrgAsm.cxx  Trig.h  TsSync.cxx  TsSync.h  Unpack.cxx  Unpack.h  Waveform.h  a16module.cxx  adc_map.txt  adc_map_000001.txt  adc_map_000158.txt  adc_map_000178.txt  adc_map_000188.txt  adc_map_000196.txt  adc_map_000224.txt  adc_map_001213.txt  (+92 more)
analib/: CMakeLists.txt  LibLinkDef.hh  LibLinkDef.hh.orig  Makefile  RootUtils.cxx  RootUtils.h  Sequencer2.cxx  Sequencer2.h  Sequencer_Channels.h  TAGPlot.cxx  TAGPlot.h  TBarEvent.hh  TChronoChannelName.cxx  TChronoChannelName.h  TChrono_Event.cxx  TChrono_Event.h  TSeq_Event.cxx  TSeq_Event.h  TSpill.cxx  TSpill.h  TStoreEvent.cc  TStoreEvent.cxx  TStoreEvent.hh  TStoreHelix.cc  TStoreHelix.cxx  TStoreHelix.hh  TStoreLine.cxx
cmake_extras/: CMakeLists.txt  GitInfo.h.in  rootlogon.C.in  setup.C  setup.C.in  setup.py.in  setup.sh.in
reco/: AGAnalyze.cc  AGAnalyze.hh  Alpha16.cxx  CMakeLists.txt  ChamberGeo.cc  ChamberGeo.hh  Globals.h  LinkDef.hh  LookUpTable.cc  LookUpTable.hh  MainEventTree.cc  Makefile  RecoLinkDef.hh  RootPlotter.cc  RootPlotter.hh  Signals.cc  Signals.hh  SpacePoints.cc  SpacePoints.hh  StraightTrack.cc  StraightTrack.hh  TDigi.hh  TFitHelix.cc  TFitHelix.hh  TFitLine.cc  TFitLine.hh  TFitVertex.cc  TFitVertex.hh  TLookUpTable.cc  TLookUpTable.hh  TPCBase.cc  TPCBase.hh  TPCconstants.hh  TSpacePoint.cc  TSpacePoint.hh  TStoreEvent.cc  TStoreEvent.hh  TStoreHelix.cc  TStoreHelix.hh  TStoreLine.cc  (+19 more)
recolib/: CMakeLists.txt  Makefile  RecoLinkDef.hh
rootUtils/: CMakeLists.txt  LibLinkDef.hh  Makefile  test
simulation/: CMakeLists.txt  README.md  ReadScintBarHits.C  ReadScintBarHits.h  install.cmake.from.source.md  plotPoints.C  sim_ana_run.sh
(+1498 files in other folders)
